[Refactoring] Clean some code.