@@ -1,6 +1,5 @@
 package fr.ignishky.fma.generator.converter.product;
 
-import com.google.common.collect.ImmutableMap;
 import com.vividsolutions.jts.geom.GeometryFactory;
 import com.vividsolutions.jts.geom.Point;
 import fr.ignishky.fma.generator.converter.dbf.NameProvider;
@@ -16,6 +15,7 @@ import org.openstreetmap.osmosis.core.domain.v0_6.Tag;
 import java.io.File;
 import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Stream;
 
 import static fr.ignishky.fma.generator.utils.Constants.BOUNDARY_ADMINISTRATIVE;
@@ -33,13 +33,10 @@ import static fr.ignishky.fma.generator.utils.TestConstants.RESOURCES_INPUT;
 import static fr.ignishky.fma.generator.utils.TestConstants.TARGET_GENERATOR;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Matchers.anyLong;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 class A0Test {
-
-    private static final String LUXEMBOURG = "Luxembourg";
 
     private final NameProvider nameProvider = mock(NameProvider.class);
     private final CapitalProvider capitalProvider = mock(CapitalProvider.class);
@@ -53,9 +50,9 @@ class A0Test {
 
     @Test
     void should_convert_a0_shapefile_to_OSM_format() {
-        when(nameProvider.getAlternateNames(anyLong())).thenReturn(ImmutableMap.of("name:fr", LUXEMBOURG));
-        when(capitalProvider.get(0)).thenReturn(Stream.of(new Centroid()
-                .withName(LUXEMBOURG)
+        when(nameProvider.getAlternateNames(14420000000652L)).thenReturn(Map.of("name:fr", "Luxembourg"));
+        when(capitalProvider.forLevel(0)).thenReturn(Stream.of(new Centroid()
+                .withName("Luxembourg")
                 .withCityTyp(9)
                 .withDisplayClass(7)
                 .withPoint(new Point(new LiteCoordinateSequence(6.1311, 49.6045), new GeometryFactory()))));
@@ -68,13 +65,14 @@ class A0Test {
 
         Relation relation = pbfContent.getRelations().get(0);
         Collection<Tag> relationTags = relation.getTags();
+
         assertThat(relationTags).hasSize(6);
         assertTag(relationTags, TAG_ADMIN_LEVEL, "2");
         assertTag(relationTags, TAG_TYPE, TAG_BOUNDARY);
         assertTag(relationTags, TAG_BOUNDARY, BOUNDARY_ADMINISTRATIVE);
         assertTag(relationTags, TAG_LAYER, "0");
-        assertTag(relationTags, TAG_NAME, LUXEMBOURG);
-        assertTag(relationTags, "name:fr", LUXEMBOURG);
+        assertTag(relationTags, TAG_NAME, "Luxembourg");
+        assertTag(relationTags, "name:fr", "Luxembourg");
 
         List<RelationMember> members = relation.getMembers();
         assertThat(members.stream().map(RelationMember::getMemberRole)).containsOnly(ROLE_LABEL, ROLE_OUTER, ROLE_ADMIN_CENTRE);
